# ml-zoomcamp-2025

./: Pipfile
01-intro/: intro.ipynb
02-regression/: regression.ipynb
03-classification/: classification.ipynb
04-evaluation/: evaluation.ipynb
05-deployment/: Dockerfile  deployment.ipynb  main.py  pyproject.toml
